# robot_cal_tools

rct_examples/src/tools/: camera_on_wrist_extrinsic.cpp  kinematic_calibration.cpp
rct_image_tools/: CMakeLists.txt  package.xml
rct_image_tools/include/rct_image_tools/: data_set.h  hand_eye_calibration_analysis.h  parameter_loaders.h  target_finder.h  target_finder_plugin.h
rct_image_tools/src/rct_image_tools/: data_set.cpp  modified_circle_grid_finder.cpp  parameter_loaders.cpp  target_loader_plugins.cpp
rct_optimizations/: CMakeLists.txt
rct_optimizations/include/rct_optimizations/: dh_chain_kinematic_calibration.h
rct_optimizations/include/rct_optimizations/serialization/: eigen.h  problems.h  types.h
rct_optimizations/src/rct_optimizations/: dh_chain_kinematic_calibration.cpp
rct_optimizations/test/: CMakeLists.txt  dh_chain_kinematic_measurement_utest.cpp  serialization_utest.cpp
rct_optimizations/test/include/rct_optimizations_tests/: utilities.h
rct_ros_tools/: CMakeLists.txt  package.xml
rct_ros_tools/include/rct_ros_tools/: parameter_loaders.h
rct_ros_tools/src/: parameter_loaders.cpp
rct_ros_tools_rclcpp/: CMakeLists.txt
rct_ros_tools_rclcpp/launch/: command_line_data_collection.launch.xml  hand_eye_calibration.launch.xml
rct_ros_tools_rclcpp/src/: command_line_cal.cpp  hand_eye_calibration.cpp  hand_eye_calibration_analysis.h
